ts/website/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
spec:
  rules:
    - host: "service.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-svc-dev
                port:
                  number: 80
